--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -49,11 +49,14 @@
             <div class="menu-section palette">
                 <div class="line"></div>
                 <div class="dish-palette">
+                   
                     <article class="dish-info-palette">
                         <h3>Escargot</h3>
                         <p>With southern French spices</p>
                     </article>
                     <span>25€</span>
+                    <!-- <i class="far fa-check-circle"></i> -->
+                    <i class="fas fa-check-circle"></i>
                 </div>
                 <div class="dish-palette">
                     <article class="dish-info-palette">
