--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+<i class="fas fa-spinner"></i>
     <!-- HEADER  -->
     <header>
 
@@ -71,52 +72,72 @@
         <!-- Section of the restaurants -->
         <article class="rsts-section">
             <h3>Restaurants</h3>
-            <a class="rst-ad" target="_self" href="the_full_palette.html">
-                <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                    alt="restaurant picture">
-                <span>New</span>
-                <div class="ad-info">
-                    <article class="info">
-                        <h4>The Full Palette</h4>
-                        <p>Paris</p>
-                    </article>
-                    <i class="far fa-heart"></i>
-                    <i class="fas fa-heart"></i>
+            <div class="rst-ad">
+                <a target="_self" href="the_full_palette.html">
+                    <img src="images/restaurants - main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                        alt="restaurant picture">
+                    <span>New</span>
+                    <div class="ad-info">
+                        <article class="info">
+                            <h4>The Full Palette</h4>
+                            <p>Paris</p>
+                        </article>
+                    </div>
+                </a>
+                <div class="main-heart">
+                    <i class="far fa-heart main-heart1"></i>
+                    <i class="fas fa-heart main-heart2"></i>
                 </div>
-            </a>
-            <a class="rst-ad" target="_self" href="the_enchanted_plate.html">
-                <img src="images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
-                <span>New</span>
-                <div class="ad-info">
-                    <article class="info">
-                        <h4>The Enchanted Plate</h4>
-                        <p>Paris</p>
-                    </article>
-                    <i class="far fa-heart"></i>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="the_enchanted_plate.html">
+                    <img src="images/restaurants - main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
+                    <span>New</span>
+                    <div class="ad-info">
+                        <article class="info">
+                            <h4>The Enchanted Plate</h4>
+                            <p>Paris</p>
+                        </article>
+                    </div>
+                </a>
+                <div class="main-heart">
+                    <i class="far fa-heart main-heart1"></i>
+                    <i class="fas fa-heart main-heart2"></i>
                 </div>
-            </a>
-            <a class="rst-ad" target="_self" href="bastille.html">
-                <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                    alt="restaurant picture">
-                <div class="ad-info">
-                    <article class="info">
-                        <h4>Bastille</h4>
-                        <p>Paris</p>
-                    </article>
-                    <i class="far fa-heart"></i>
+            </div>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="le_gourmand.html">
+                    <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                        alt="restaurant picture">
+                    <div class="ad-info">
+                        <article class="info">
+                            <h4>Le Gourmand</h4>
+                            <p>Paris</p>
+                        </article>
+                    </div>
+                </a>
+                <div class="main-heart">
+                    <i class="far fa-heart main-heart1"></i>
+                    <i class="fas fa-heart main-heart2"></i>
                 </div>
-            </a>
-            <a class="rst-ad" target="_self" href="le_gourmand.html">
-                <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                    alt="restaurant picture">
-                <div class="ad-info">
-                    <article class="info">
-                        <h4>Le Gourmand</h4>
-                        <p>Paris</p>
-                    </article>
-                    <i class="far fa-heart"></i>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="bastille.html">
+                    <img src="images/restaurants - main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                        alt="restaurant picture">
+                    <div class="ad-info">
+                        <article class="info">
+                            <h4>Bastille</h4>
+                            <p>Paris</p>
+                        </article>
+                    </div>
+                </a>
+                <div class="main-heart">
+                    <i class="far fa-heart main-heart1"></i>
+                    <i class="fas fa-heart main-heart2"></i>
                 </div>
-            </a>
+            </div>
         </article>
     </main>
     <footer>
