--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -23,6 +23,12 @@
 </head>
 
 <body>
+    <!-- <div class="container">
+        <div class="btn">Loading</div>
+        <div class="progress">
+            <div class="progress__bar"></div>
+        </div>
+    </div> -->
 <i class="fas fa-spinner"></i>
     <!-- HEADER  -->
     <header>
@@ -84,10 +90,10 @@
                         </article>
                     </div>
                 </a>
-                <div class="main-heart">
+                <!-- <div class="main-heart"> -->
                     <i class="far fa-heart main-heart1"></i>
                     <i class="fas fa-heart main-heart2"></i>
-                </div>
+                <!-- </div> -->
             </div>
             <div class="rst-ad">
                 <a target="_self" href="the_enchanted_plate.html">
