--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -85,12 +85,10 @@
                                 <h4>The Full Palette</h4>
                                 <p>Paris</p>
                             </article>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
                         </div>
                     </a>
-                    <div class="main-heart">
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="the_enchanted_plate.html">
@@ -102,25 +100,23 @@
                                 <h4>The Enchanted Plate</h4>
                                 <p>Paris</p>
                             </article>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
                         </div>
                     </a>
-                    <div class="main-heart">
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="le_gourmand.html">
                         <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
                             alt="restaurant picture">
-                        <div class="ad-info">
-                            <article class="info">
+                        <article class="ad-info">
+                            <!-- <article class="info"> -->
                                 <h4>Le Gourmand</h4>
                                 <p>Paris</p>
                             </article>
-                        </div>
+                        <!-- </div> -->
                     </a>
-                    <div class="main-heart">
+                    <div class="main-hearts">
                         <i class="far fa-heart main-heart1"></i>
                         <i class="fas fa-heart main-heart2"></i>
                     </div>
@@ -134,14 +130,11 @@
                                 <h4>Bastille</h4>
                                 <p>Paris</p>
                             </article>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
                         </div>
                     </a>
-                    <div class="main-heart">
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
                 </div>
-
             </article>
         </main>
         <footer>
