--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -48,16 +48,23 @@
             <h2>ENTREES</h2>
             <div class="menu-section palette">
                 <div class="line"></div>
-                <div class="dish-palette">
-                    <article class="dish-info-palette">
-                        <h3>Escargot</h3>
-                        <p>With southern French spices </p>
-                    </article>
-                    <span>25€</span>
-                    <div class="check">
-                        <i class="fas fa-check-circle"></i>
+                <!-- <div class="container-dish-wrap"> -->
+                    <div class="visible-dish-wrap">
+                        <div class="dish-wrap-palette">
+                            <div class="dish-palette">
+                                <article class="dish-info-palette">
+                                    <h3>Escargot</h3>
+                                    <p>With southern French spices With southern French</p>
+                                </article>
+                                <span class="dish-palette-price">25€</span>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                <!-- </div> -->
+
                 <div class="dish-palette">
                     <article class="dish-info-palette">
                         <h3>Duck Foie Gras</h3>
