--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -109,12 +109,12 @@
                     <a target="_self" href="le_gourmand.html">
                         <img src="images/restaurants - main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
                             alt="restaurant picture">
-                        <article class="ad-info">
-                            <!-- <article class="info"> -->
+                        <div class="ad-info">
+                            <article class="info">
                                 <h4>Le Gourmand</h4>
                                 <p>Paris</p>
                             </article>
-                        <!-- </div> -->
+                        </div>
                     </a>
                     <div class="main-hearts">
                         <i class="far fa-heart main-heart1"></i>
